<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="com.example.olaf.weatherproject.Weather">

    <ImageView
        android:layout_width="wrap_content"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:id="@+id/todayWeatherIcon"
        android:src="@drawable/icon_na"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/todayTemperature"
        android:textColor="#FFFFFF"
        android:id="@+id/todayTemperature"
        android:layout_below="@+id/todayWeatherIcon"
        android:layout_centerHorizontal="true"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/conditions"
        android:textColor="#FFFFFF"
        android:id="@+id/conditions"
        android:layout_below="@+id/todayTemperature"
        android:layout_centerHorizontal="true"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/wind"
        android:textColor="#FFFFFF"
        android:id="@+id/wind"
        android:layout_below="@+id/conditions"
        android:layout_centerHorizontal="true"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sunrise"
        android:textColor="#FFFFFF"
        android:id="@+id/sunrise"
        android:layout_below="@+id/sunriseIco"
        android:layout_alignStart="@+id/sunriseIco"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sunset"
        android:textColor="#FFFFFF"
        android:id="@+id/sunset"
        android:layout_above="@+id/location"
        android:layout_alignEnd="@+id/sunsetIco"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/location"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/sunrise"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:typeface="serif" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/date"
        android:id="@+id/dateToday"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/location"
        android:layout_centerHorizontal="true"
        android:typeface="serif" />

    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textColor="#FFFFFF"
        android:id="@+id/sunriseIco"
        android:src="@drawable/sunrise"
        android:layout_marginLeft="1dp"
        android:layout_alignTop="@+id/sunsetIco"
        android:layout_toStartOf="@+id/todayTemperature" />

    <ImageView
        android:adjustViewBounds="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textColor="#FFFFFF"
        android:id="@+id/sunsetIco"
        android:src="@drawable/sunset"
        android:layout_below="@+id/wind"
        android:layout_toEndOf="@+id/todayTemperature" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dateToday"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/wind">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Temperature"
            android:textColor="#FFFFFF"
            android:id="@+id/nextDayTemp"
            android:layout_gravity="left|center_vertical"
            android:layout_below="@+id/nextDayIco"
            android:layout_centerHorizontal="true"
            android:typeface="serif" />

        <ImageView
            android:layout_width="151dp"
            android:layout_height="55dp"
            android:adjustViewBounds="true"
            android:id="@+id/nextDayIco"
            android:textColor="#FFFFFF"
            android:src="@drawable/icon_na"
            android:layout_gravity="left|center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/conditions"
            android:textColor="#FFFFFF"
            android:id="@+id/nextConditions"
            android:layout_below="@+id/nextDayTemp"
            android:layout_centerHorizontal="true"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/date"
            android:id="@+id/nextdate"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/nextConditions"
            android:layout_centerHorizontal="true"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/GPS"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/nextDayTemp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/dateToday"
        android:layout_alignEnd="@+id/sunsetIco"
        android:layout_below="@+id/dateToday">

        <ImageView
            android:layout_width="151dp"
            android:layout_height="55dp"
            android:adjustViewBounds="true"
            android:id="@+id/nextnextDayIco"
            android:textColor="#FFFFFF"
            android:src="@drawable/icon_na"
            android:layout_gravity="left|center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/date"
            android:id="@+id/nextnextDate"
            android:layout_below="@+id/nextNextCondition"
            android:layout_centerHorizontal="true"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/conditions"
            android:textColor="#FFFFFF"
            android:id="@+id/nextNextCondition"
            android:layout_below="@+id/nextNextTemp"
            android:layout_centerHorizontal="true"
            android:typeface="serif" />

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Temperature"
            android:textColor="#FFFFFF"
            android:id="@+id/nextNextTemp"
            android:layout_gravity="left|center_vertical"
            android:typeface="serif"
            android:layout_below="@+id/nextnextDayIco"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
